crates/ruff_python_parser/tests/snapshots/invalid_syntax@global_parameter.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/global_parameter.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..19,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..18,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 4..5,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 5..8,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 6..7,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 6..7,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 6..7,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Global(
                            StmtGlobal {
                                node_index: NodeIndex(None),
                                range: 10..18,
                                names: [
                                    Identifier {
                                        id: Name("a"),
                                        range: 17..18,
                                        node_index: NodeIndex(None),
                                    },
                                ],
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | def f(a): global a
  |                  ^ Syntax Error: name `a` is parameter and global
  |
