crates/ruff_python_parser/tests/snapshots/invalid_syntax@if_stmt_empty_body.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/if_stmt_empty_body.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..15,
        body: Suite {
            range: 0..15,
            node_index: NodeIndex(None),
            statements: [
                If(
                    StmtIf {
                        node_index: NodeIndex(None),
                        range: 0..8,
                        test: BooleanLiteral(
                            ExprBooleanLiteral {
                                node_index: NodeIndex(None),
                                range: 3..7,
                                value: true,
                            },
                        ),
                        body: Suite {
                            range: 8..8,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                        elif_else_clauses: [],
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 9..14,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 9..14,
                                left: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 9..10,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                op: Add,
                                right: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 13..14,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | if True:
2 | 1 + 1
  | ^ Syntax Error: Expected an indented block after `if` statement
  |
